--- a/Scoreboard.csproj
+++ b/Scoreboard.csproj
@@ -59,6 +59,13 @@
       <DependentUpon>GameForm.cs</DependentUpon>
     </Compile>
     <Compile Include="Classes\Program.cs" />
+    <Compile Include="Forms\LoadTeamDataForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\LoadTeamDataForm.Designer.cs">
+      <DependentUpon>LoadTeamDataForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Classes\Player.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Forms\ScoreboardForm.cs">
       <SubType>Form</SubType>
@@ -71,6 +78,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\GameForm.resx">
       <DependentUpon>GameForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\LoadTeamDataForm.resx">
+      <DependentUpon>LoadTeamDataForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
