--- a/Scoreboard.csproj
+++ b/Scoreboard.csproj
@@ -46,9 +46,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Classes\Advertisment.cs" />
-    <Compile Include="Classes\Database.cs" />
-    <Compile Include="Classes\Team.cs" />
+    <Compile Include="Classes\Database\Advertisment.cs" />
+    <Compile Include="Classes\Database\Database.cs" />
+    <Compile Include="Classes\GameStatistics\MatchEvent.cs" />
+    <Compile Include="Classes\GameStatistics\MatchStatistics.cs" />
+    <Compile Include="Classes\Database\Team.cs" />
+    <Compile Include="Classes\GameStatistics\TeamStatistics.cs" />
     <Compile Include="Classes\Time.cs" />
     <Compile Include="Forms\ControlForm.cs">
       <SubType>Form</SubType>
@@ -56,36 +59,36 @@
     <Compile Include="Forms\ControlForm.Designer.cs">
       <DependentUpon>ControlForm.cs</DependentUpon>
     </Compile>
-    <Compile Include="Forms\CreatePlayerForm.cs">
+    <Compile Include="Forms\DBForms\CreatePlayerForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Forms\CreatePlayerForm.Designer.cs">
+    <Compile Include="Forms\DBForms\CreatePlayerForm.Designer.cs">
       <DependentUpon>CreatePlayerForm.cs</DependentUpon>
     </Compile>
-    <Compile Include="Forms\CreateTeamForm.cs">
+    <Compile Include="Forms\DBForms\CreateTeamForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Forms\CreateTeamForm.Designer.cs">
+    <Compile Include="Forms\DBForms\CreateTeamForm.Designer.cs">
       <DependentUpon>CreateTeamForm.cs</DependentUpon>
     </Compile>
-    <Compile Include="Forms\GameForm.cs">
+    <Compile Include="Forms\MainGameForms\GameForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Forms\GameForm.Designer.cs">
+    <Compile Include="Forms\MainGameForms\GameForm.Designer.cs">
       <DependentUpon>GameForm.cs</DependentUpon>
     </Compile>
     <Compile Include="Classes\Program.cs" />
-    <Compile Include="Forms\LoadTeamDataForm.cs">
+    <Compile Include="Forms\DBForms\LoadTeamDataForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Forms\LoadTeamDataForm.Designer.cs">
+    <Compile Include="Forms\DBForms\LoadTeamDataForm.Designer.cs">
       <DependentUpon>LoadTeamDataForm.cs</DependentUpon>
     </Compile>
-    <Compile Include="Classes\Player.cs" />
-    <Compile Include="Forms\LoadAds.cs">
+    <Compile Include="Classes\Database\Player.cs" />
+    <Compile Include="Forms\DBForms\LoadAds.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Forms\LoadAds.Designer.cs">
+    <Compile Include="Forms\DBForms\LoadAds.Designer.cs">
       <DependentUpon>LoadAds.cs</DependentUpon>
     </Compile>
     <Compile Include="Forms\SetTimes.cs">
@@ -94,41 +97,41 @@
     <Compile Include="Forms\SetTimes.Designer.cs">
       <DependentUpon>SetTimes.cs</DependentUpon>
     </Compile>
-    <Compile Include="Forms\VideoPlayerForm.cs">
+    <Compile Include="Forms\MainGameForms\VideoPlayerForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Forms\VideoPlayerForm.Designer.cs">
+    <Compile Include="Forms\MainGameForms\VideoPlayerForm.Designer.cs">
       <DependentUpon>VideoPlayerForm.cs</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Forms\ScoreboardForm.cs">
+    <Compile Include="Forms\MainGameForms\ScoreboardForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Forms\ScoreboardForm.Designer.cs">
+    <Compile Include="Forms\MainGameForms\ScoreboardForm.Designer.cs">
       <DependentUpon>ScoreboardForm.cs</DependentUpon>
     </Compile>
     <EmbeddedResource Include="Forms\ControlForm.resx">
       <DependentUpon>ControlForm.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Forms\CreatePlayerForm.resx">
+    <EmbeddedResource Include="Forms\DBForms\CreatePlayerForm.resx">
       <DependentUpon>CreatePlayerForm.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Forms\CreateTeamForm.resx">
+    <EmbeddedResource Include="Forms\DBForms\CreateTeamForm.resx">
       <DependentUpon>CreateTeamForm.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Forms\GameForm.resx">
+    <EmbeddedResource Include="Forms\MainGameForms\GameForm.resx">
       <DependentUpon>GameForm.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Forms\LoadAds.resx">
+    <EmbeddedResource Include="Forms\DBForms\LoadAds.resx">
       <DependentUpon>LoadAds.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Forms\LoadTeamDataForm.resx">
+    <EmbeddedResource Include="Forms\DBForms\LoadTeamDataForm.resx">
       <DependentUpon>LoadTeamDataForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\SetTimes.resx">
       <DependentUpon>SetTimes.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Forms\VideoPlayerForm.resx">
+    <EmbeddedResource Include="Forms\MainGameForms\VideoPlayerForm.resx">
       <DependentUpon>VideoPlayerForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
@@ -140,7 +143,7 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
-    <EmbeddedResource Include="Forms\ScoreboardForm.resx">
+    <EmbeddedResource Include="Forms\MainGameForms\ScoreboardForm.resx">
       <DependentUpon>ScoreboardForm.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="Properties\DataSources\Scoreboard.Classes.Database.datasource" />
@@ -176,5 +179,6 @@
       <EmbedInteropTypes>True</EmbedInteropTypes>
     </COMReference>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
