--- a/Scoreboard.csproj
+++ b/Scoreboard.csproj
@@ -97,6 +97,12 @@
     <Compile Include="Forms\SelectPlayerGoal.Designer.cs">
       <DependentUpon>SelectPlayerGoal.cs</DependentUpon>
     </Compile>
+    <Compile Include="Forms\SetPenaltyForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\SetPenaltyForm.Designer.cs">
+      <DependentUpon>SetPenaltyForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="Forms\SetTimes.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -136,6 +142,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\SelectPlayerGoal.resx">
       <DependentUpon>SelectPlayerGoal.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\SetPenaltyForm.resx">
+      <DependentUpon>SetPenaltyForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\SetTimes.resx">
       <DependentUpon>SetTimes.cs</DependentUpon>
