--- a/Scoreboard.csproj
+++ b/Scoreboard.csproj
@@ -117,6 +117,12 @@
     <Compile Include="Forms\MainGameForms\VideoPlayerForm.Designer.cs">
       <DependentUpon>VideoPlayerForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="Forms\StatisticsSettings.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\StatisticsSettings.Designer.cs">
+      <DependentUpon>StatisticsSettings.cs</DependentUpon>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Forms\MainGameForms\ScoreboardForm.cs">
       <SubType>Form</SubType>
@@ -153,6 +159,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\MainGameForms\VideoPlayerForm.resx">
       <DependentUpon>VideoPlayerForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\StatisticsSettings.resx">
+      <DependentUpon>StatisticsSettings.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
