--- a/Scoreboard.csproj
+++ b/Scoreboard.csproj
@@ -48,6 +48,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Classes\AuxiliaryDevices\CommunicationController.cs" />
     <Compile Include="Classes\Database\Advertisment.cs" />
     <Compile Include="Classes\Database\Database.cs" />
     <Compile Include="Classes\GameStatistics\MatchEvent.cs" />
@@ -56,6 +57,7 @@
     <Compile Include="Classes\GameStatistics\TeamStatistics.cs" />
     <Compile Include="Classes\Appearance\ScoreboardElement.cs" />
     <Compile Include="Classes\Appearance\ScoreboardSettings.cs" />
+    <Compile Include="Classes\AuxiliaryDevices\SirenType.cs" />
     <Compile Include="Classes\Time.cs" />
     <Compile Include="Forms\Appearance\ControlForm.cs">
       <SubType>Form</SubType>
