--- a/Scoreboard.csproj
+++ b/Scoreboard.csproj
@@ -103,6 +103,18 @@
     <Compile Include="Forms\DBForms\LoadAds.Designer.cs">
       <DependentUpon>LoadAds.cs</DependentUpon>
     </Compile>
+    <Compile Include="Forms\ManualEvent.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\ManualEvent.Designer.cs">
+      <DependentUpon>ManualEvent.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Forms\SerialPortSettings.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\SerialPortSettings.Designer.cs">
+      <DependentUpon>SerialPortSettings.cs</DependentUpon>
+    </Compile>
     <Compile Include="Forms\Statistics\SelectPlayerGoal.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -160,6 +172,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\DBForms\LoadTeamDataForm.resx">
       <DependentUpon>LoadTeamDataForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\ManualEvent.resx">
+      <DependentUpon>ManualEvent.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\SerialPortSettings.resx">
+      <DependentUpon>SerialPortSettings.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\Statistics\SelectPlayerGoal.resx">
       <DependentUpon>SelectPlayerGoal.cs</DependentUpon>
